--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href ="">WEBSTUDIO</a>
+        <a href ="”./index.html">WebStudio</a>
         <nav>
         <ul>
             <li><a href="">Studio</a></li>
@@ -18,14 +18,14 @@
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button>Order Service</button>
+            <button type="button">Order Service</button>
         </section>
         <section>
             <h2>Features</h2>
@@ -75,7 +75,7 @@
         </section>
     </main>
 <footer>
-    <a href="">WEBSTUDIO</a>
+    <a href="”./index.html">WebStudio</a>
 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>   
 </body>
