--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
@@ -52,22 +52,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="images/Mark_Guerrero.jpg" alt="Mark_Guerrero_photo" width="260" height="264">
+                    <img src="images/Mark_Guerrero.jpg" alt="Mark_Guerrero_photo" width=260px height=264px>
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/Tom_Ford.jpg" alt="Tom_Ford_photo" width="260" height="264">
+                    <img src="images/Tom_Ford.jpg" alt="Tom_Ford_photo" width=260px height=264px>
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/Camila_Garcia.jpg" alt="Camila_Garcia_photo" width="260" height="264">
+                    <img src="images/Camila_Garcia.jpg" alt="Camila_Garcia_photo" width=260px height=264px>
                     <h3>Camila Garcia</h3>
                     <p>Camila Garcia</p>
                 </li>
                 <li>
-                    <img src="images/Daniel_Wilson.jpg" alt="Daniel_Wilson_photo" width="260" height="264">
+                    <img src="images/Daniel_Wilson.jpg" alt="Daniel_Wilson_photo" width=260px height=264px>
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
