--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <li>
                     <img src="images/Camila_Garcia.jpg" alt="Camila_Garcia_photo" width=260 />
                     <h3>Camila Garcia</h3>
-                    <p>Camila Garcia</p>
+                    <p>Marketing</p>
                 </li>
                 <li>
                     <img src="images/Daniel_Wilson.jpg" alt="Daniel_Wilson_photo" width=260 />
