--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="images/Mark_Guerrero.jpg" alt="Mark_Guerrero_photo" width="260" >
+                    <img src="/images/Mark_Guerrero.jpg" alt="Mark_Guerrero_photo" width="260" >
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/Tom_Ford.jpg" alt="Tom_Ford_photo" width="260" >
+                    <img src="/images/Tom_Ford.jpg" alt="Tom_Ford_photo" width="260" >
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/Camila_Garcia.jpg" alt="Camila_Garcia_photo" width="260" >
+                    <img src="/images/Camila_Garcia.jpg" alt="Camila_Garcia_photo" width="260" >
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/Daniel_Wilson.jpg" alt="Daniel_Wilson_photo" width="260" >
+                    <img src="/images/Daniel_Wilson.jpg" alt="Daniel_Wilson_photo" width="260" >
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
