--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/Mark_Guerrero.jpg" alt="Mark_Guerrero_photo" width="264">
+                    <img 
+                    src="/images/Mark_Guerrero.jpg" 
+                    alt="Mark_Guerrero_photo" 
+                    width="264"
+                    />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
