--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/Guerrero.jpg" alt="Mark_Guerrero_photo" width="264"/>
+                    <img src="/images/Guerrero.jpg" alt="photoGuerrero" width="264"/>
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/Ford.jpg" alt="Tom_Ford_photo" width="264"/>
+                    <img src="/images/Ford.jpg" alt="photoFord" width="264"/>
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/Garcia.jpg" alt="Camila_Garcia_photo" width="264"/>
+                    <img src="/images/Garcia.jpg" alt="photoGarcia" width="264"/>
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/Wilson.jpg" alt="Daniel_Wilson_photo" width="264"/>
+                    <img src="/images/Wilson.jpg" alt="photoWilson" width="264"/>
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
