--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/Guerrero.jpg" alt="Image of Guerrero" width="264">
+                    <img src="./images/MarkGuerrero.jpg" alt="Guerrero" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Ford.jpg" alt="Image of Ford" width="264">
+                    <img src="./images/TomFord.jpg" alt="Ford" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Garcia.jpg" alt="Image of Garcia" width="264">
+                    <img src="./images/CamilaGarcia.jpg" alt="Garcia" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Wilson.jpg" alt="Image of Wilson" width="264">
+                    <img src="./images/DanielWilson.jpg" alt="Wilson" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
